objects/ASI_TnE_Dynamic_Approval_Route__c.object
<CustomObject>
    <fields>
        <fullName>ASI_TnE_Approval_Limit__c</fullName>
        <label>Approval Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_End_of_1st_Route__c</fullName>
        <defaultValue>false</defaultValue>
        <label>End of 1st Route</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Manager_ID__c</fullName>
        <formula>ASI_TnE_User__r.ManagerId</formula>
        <label>Manager ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>T&amp;E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_TnE_DARlookUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ASI TnE Dynamic Approval Route</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_JP</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Approval_Limit__c</columns>
        <columns>ASI_TnE_End_of_1st_Route__c</columns>
        <columns>ASI_TnE_Inactive__c</columns>
        <columns>ASI_TnE_Manager_ID__c</columns>
        <columns>ASI_TnE_Type__c</columns>
        <columns>ASI_TnE_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Dynamic_Approval_Route__c.ASI_TnE_JP_Dynamic_Approval_Route</value>
        </filters>
        <label>All JP</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_JP</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>DAR-{000000}</displayFormat>
        <label>ASI TnE Dynamic Approval Route Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI TnE Dynamic Approval Routes</pluralLabel>
    <recordTypes>
        <fullName>ASI_TnE_JP_Dynamic_Approval_Route</fullName>
        <active>true</active>
        <label>JP Dynamic Approval Route</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>